--- a/index.html
+++ b/index.html
@@ -5,38 +5,100 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>My Personal Website</title>
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
+        /* 全局样式 */
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Roboto', sans-serif;
             background-color: #f4f4f4;
+            color: #333;
             margin: 0;
             padding: 0;
         }
+
+        /* 头部样式 */
         header {
             background-color: #4CAF50;
             color: white;
-            padding: 10px 0;
+            padding: 20px 0;
             text-align: center;
+            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
         }
+
+        /* 导航栏样式 */
         nav {
-            margin: 20px;
+            text-align: center;
+            background-color: #333;
+            padding: 15px 0;
         }
+
         nav a {
             margin: 0 15px;
             text-decoration: none;
-            color: #333;
+            color: white;
+            font-weight: bold;
+            padding: 10px 15px;
         }
+
+        nav a:hover {
+            background-color: #4CAF50;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+
+        /* 主体内容 */
         main {
-            padding: 20px;
+            padding: 40px 20px;
+            max-width: 1200px;
+            margin: 0 auto;
         }
+
+        section {
+            margin-bottom: 40px;
+        }
+
+        section h2 {
+            font-size: 28px;
+            margin-bottom: 10px;
+            color: #4CAF50;
+        }
+
+        section p {
+            font-size: 16px;
+            line-height: 1.6;
+        }
+
+        /* 页脚样式 */
         footer {
             text-align: center;
-            padding: 10px;
-            background-color: #4CAF50;
+            padding: 20px;
+            background-color: #333;
             color: white;
-            position: absolute;
-            width: 100%;
+            position: relative;
             bottom: 0;
+            width: 100%;
+            margin-top: 40px;
+        }
+
+        footer p {
+            margin: 0;
+        }
+
+        /* 响应式设计 */
+        @media (max-width: 768px) {
+            main {
+                padding: 20px;
+            }
+
+            section h2 {
+                font-size: 24px;
+            }
+
+            nav a {
+                margin: 0 10px;
+                padding: 8px 10px;
+            }
         }
     </style>
 </head>
