--- a/index.html
+++ b/index.html
@@ -69,6 +69,31 @@
             line-height: 1.6;
         }
 
+        /* 图片样式 */
+        .image-section img {
+            max-width: 100%;
+            height: auto;
+            display: block;
+            margin: 20px auto;
+            border-radius: 10px;
+            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+        }
+
+        /* 视频样式 */
+        .video-section video {
+            width: 100%;
+            border-radius: 10px;
+            margin: 20px 0;
+        }
+
+        /* YouTube视频嵌入 */
+        .video-section iframe {
+            width: 100%;
+            height: 500px;
+            border: none;
+            border-radius: 10px;
+        }
+
         /* 页脚样式 */
         footer {
             text-align: center;
@@ -99,6 +124,10 @@
                 margin: 0 10px;
                 padding: 8px 10px;
             }
+
+            .video-section iframe {
+                height: 300px;
+            }
         }
     </style>
 </head>
@@ -112,20 +141,47 @@
 <nav>
     <a href="#home">Home</a>
     <a href="#about">About Me</a>
+    <a href="#gallery">Gallery</a>
+    <a href="#video">Videos</a>
     <a href="#contact">Contact</a>
 </nav>
 
 <main>
+    <!-- Home Section -->
     <section id="home">
         <h2>Home</h2>
         <p>This is the home section where you can introduce yourself.</p>
     </section>
 
+    <!-- About Section -->
     <section id="about">
         <h2>About Me</h2>
         <p>Write a brief paragraph about who you are, your hobbies, interests, or your studies.</p>
     </section>
 
+    <!-- Gallery Section with Image -->
+    <section id="gallery" class="image-section">
+        <h2>Gallery</h2>
+        <p>Here are some of my favorite pictures.</p>
+        <img src="https://via.placeholder.com/800x400" alt="A placeholder image">
+    </section>
+
+    <!-- Video Section -->
+    <section id="video" class="video-section">
+        <h2>Videos</h2>
+        <p>Watch my latest videos:</p>
+        
+        <!-- 本地视频 -->
+        <video controls>
+            <source src="your-video-file.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+
+        <!-- 嵌入YouTube视频 -->
+        <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </section>
+
+    <!-- Contact Section -->
     <section id="contact">
         <h2>Contact</h2>
         <p>Provide your contact details here. For example, you can add your email or a contact form in the future.</p>
