--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     <section id="gallery" class="image-section">
         <h2>Gallery</h2>
         <p>Here are some of my favorite pictures.</p>
-        <img src="https://via.placeholder.com/800x400" alt="A placeholder image">
+        <img src="https://github.com/zhangwenhao1111/fist/blob/main/%E5%B1%8F%E5%B9%95%E6%88%AA%E5%9B%BE%202024-10-10%20080710.png" alt="A placeholder image">
     </section>
 
     <!-- Video Section -->
