--- a/index.html
+++ b/index.html
@@ -178,9 +178,9 @@
 
         <div class="carousel">
             <div class="carousel-container">
-                <img src="https://raw.githubusercontent.com/zhangwenhao1111/fist/main/your-first-image.png" alt="Image 1">
-                <img src="https://raw.githubusercontent.com/zhangwenhao1111/fist/main/your-second-image.png" alt="Image 2">
-                <img src="https://raw.githubusercontent.com/zhangwenhao1111/fist/main/your-third-image.png" alt="Image 3">
+                <img src="https://github.com/zhangwenhao1111/fist/blob/main/1.jpg" alt="Image 1">
+                <img src="https://github.com/zhangwenhao1111/fist/blob/main/2.jpg" alt="Image 2">
+                <img src="https://github.com/zhangwenhao1111/fist/blob/main/3.jpg" alt="Image 3">
             </div>
             <button class="carousel-button prev" onclick="prevSlide()">❮</button>
             <button class="carousel-button next" onclick="nextSlide()">❯</button>
