--- a/index.html
+++ b/index.html
@@ -179,8 +179,8 @@
         <div class="carousel">
             <div class="carousel-container">
                 <img src="https://github.com/zhangwenhao1111/fist/blob/main/1.jpg?raw=true" alt="Image 1">
-                <img src="https://github.com/zhangwenhao1111/fist/blob/main/2.jpg" alt="Image 2">
-                <img src="https://github.com/zhangwenhao1111/fist/blob/main/3.jpg" alt="Image 3">
+                <img src="https://github.com/zhangwenhao1111/fist/blob/main/2.jpg?raw=true" alt="Image 2">
+                <img src="https://github.com/zhangwenhao1111/fist/blob/main/3.jpg?raw=true" alt="Image 3">
             </div>
             <button class="carousel-button prev" onclick="prevSlide()">❮</button>
             <button class="carousel-button next" onclick="nextSlide()">❯</button>
