--- a/index.html
+++ b/index.html
@@ -8,37 +8,34 @@
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
-        /* 全局样式 */
         body {
             font-family: 'Roboto', sans-serif;
-            background-color: #f4f4f4;
+            background-color: #f9f9f9;
             color: #333;
             margin: 0;
             padding: 0;
         }
 
-        /* 头部样式 */
         header {
             background-color: #4CAF50;
             color: white;
-            padding: 20px 0;
+            padding: 20px;
             text-align: center;
             box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
         }
 
-        /* 导航栏样式 */
         nav {
             text-align: center;
             background-color: #333;
-            padding: 15px 0;
+            padding: 15px;
         }
 
         nav a {
-            margin: 0 15px;
+            margin: 0 10px;
             text-decoration: none;
             color: white;
             font-weight: bold;
-            padding: 10px 15px;
+            padding: 8px 12px;
         }
 
         nav a:hover {
@@ -47,7 +44,6 @@
             transition: background-color 0.3s ease;
         }
 
-        /* 主体内容 */
         main {
             padding: 40px 20px;
             max-width: 1200px;
@@ -62,27 +58,21 @@
             font-size: 28px;
             margin-bottom: 10px;
             color: #4CAF50;
+            text-align: center;
         }
 
-        section p {
-            font-size: 16px;
-            line-height: 1.6;
-        }
-
-        /* 图片滑动样式 */
         .carousel {
-            width: 100%;
             margin: 0 auto;
             position: relative;
             overflow: hidden;
             max-width: 700px;
+            border-radius: 10px;
         }
 
         .carousel img {
             width: 100%;
             height: auto;
             display: block;
-            border-radius: 10px;
             transition: transform 0.5s ease;
         }
 
@@ -110,36 +100,25 @@
             right: 10px;
         }
 
-        /* 页脚样式 */
+        video {
+            display: block;
+            margin: 20px auto;
+            max-width: 700px;
+            border-radius: 10px;
+        }
+
+        iframe {
+            display: block;
+            margin: 20px auto;
+            max-width: 700px;
+            border-radius: 10px;
+        }
+
         footer {
             text-align: center;
             padding: 20px;
             background-color: #333;
             color: white;
-            position: relative;
-            bottom: 0;
-            width: 100%;
-            margin-top: 40px;
-        }
-
-        footer p {
-            margin: 0;
-        }
-
-        /* 响应式设计 */
-        @media (max-width: 768px) {
-            main {
-                padding: 20px;
-            }
-
-            section h2 {
-                font-size: 24px;
-            }
-
-            nav a {
-                margin: 0 10px;
-                padding: 8px 10px;
-            }
         }
     </style>
 </head>
@@ -147,34 +126,18 @@
 
 <header>
     <h1>Welcome to My Website</h1>
-    <p>A simple personal website created with HTML & CSS</p>
 </header>
 
 <nav>
-    <a href="#home">Home</a>
-    <a href="#about">About Me</a>
     <a href="#gallery">Gallery</a>
     <a href="#video">Videos</a>
     <a href="#contact">Contact</a>
 </nav>
 
 <main>
-    <!-- Home Section -->
-    <section id="home">
-        <h2>Home</h2>
-        <p>This is the home section where you can introduce yourself.</p>
-    </section>
-
-    <!-- About Section -->
-    <section id="about">
-        <h2>About Me</h2>
-        <p>Write a brief paragraph about who you are, your hobbies, interests, or your studies.</p>
-    </section>
-
     <!-- Gallery Section with Image Carousel -->
     <section id="gallery" class="image-section">
         <h2>Gallery</h2>
-        <p>Here are some of my favorite pictures.</p>
 
         <div class="carousel">
             <div class="carousel-container">
@@ -188,24 +151,21 @@
     </section>
 
     <!-- Video Section -->
-    <section id="video" class="video-section">
+    <section id="video">
         <h2>Videos</h2>
-        <p>Watch my latest videos:</p>
-        
-        <!-- 本地视频 -->
+
         <video controls>
             <source src="your-video-file.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
 
-        <!-- 嵌入YouTube视频 -->
         <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </section>
 
     <!-- Contact Section -->
     <section id="contact">
         <h2>Contact</h2>
-        <p>Provide your contact details here. For example, you can add your email or a contact form in the future.</p>
+        <p style="text-align:center;">Feel free to contact me at: <strong>your-email@example.com</strong></p>
     </section>
 </main>
 
