--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>My Personal Website</title>
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <title>Gallery and Video</title>
     <style>
         body {
             font-family: 'Roboto', sans-serif;
@@ -16,53 +14,8 @@
             padding: 0;
         }
 
-        header {
-            background-color: #4CAF50;
-            color: white;
-            padding: 20px;
-            text-align: center;
-            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-        }
-
-        nav {
-            text-align: center;
-            background-color: #333;
-            padding: 15px;
-        }
-
-        nav a {
-            margin: 0 10px;
-            text-decoration: none;
-            color: white;
-            font-weight: bold;
-            padding: 8px 12px;
-        }
-
-        nav a:hover {
-            background-color: #4CAF50;
-            border-radius: 5px;
-            transition: background-color 0.3s ease;
-        }
-
-        main {
-            padding: 40px 20px;
-            max-width: 1200px;
-            margin: 0 auto;
-        }
-
-        section {
-            margin-bottom: 40px;
-        }
-
-        section h2 {
-            font-size: 28px;
-            margin-bottom: 10px;
-            color: #4CAF50;
-            text-align: center;
-        }
-
         .carousel {
-            margin: 0 auto;
+            margin: 40px auto;
             position: relative;
             overflow: hidden;
             max-width: 700px;
@@ -102,7 +55,7 @@
 
         video {
             display: block;
-            margin: 20px auto;
+            margin: 40px auto;
             max-width: 700px;
             border-radius: 10px;
         }
@@ -113,65 +66,32 @@
             max-width: 700px;
             border-radius: 10px;
         }
-
-        footer {
-            text-align: center;
-            padding: 20px;
-            background-color: #333;
-            color: white;
-        }
     </style>
 </head>
 <body>
 
-<header>
-    <h1>Welcome to My Website</h1>
-</header>
-
-<nav>
-    <a href="#gallery">Gallery</a>
-    <a href="#video">Videos</a>
-    <a href="#contact">Contact</a>
-</nav>
-
-<main>
-    <!-- Gallery Section with Image Carousel -->
-    <section id="gallery" class="image-section">
-        <h2>Gallery</h2>
-
-        <div class="carousel">
-            <div class="carousel-container">
-                <img src="https://github.com/zhangwenhao1111/fist/blob/main/1.jpg?raw=true" alt="Image 1">
-                <img src="https://github.com/zhangwenhao1111/fist/blob/main/2.jpg?raw=true" alt="Image 2">
-                <img src="https://github.com/zhangwenhao1111/fist/blob/main/3.jpg?raw=true" alt="Image 3">
-            </div>
-            <button class="carousel-button prev" onclick="prevSlide()">❮</button>
-            <button class="carousel-button next" onclick="nextSlide()">❯</button>
+<!-- Gallery Section with Image Carousel -->
+<section id="gallery" class="image-section">
+    <div class="carousel">
+        <div class="carousel-container">
+            <img src="https://github.com/zhangwenhao1111/fist/blob/main/1.jpg?raw=true" alt="Image 1">
+            <img src="https://github.com/zhangwenhao1111/fist/blob/main/2.jpg?raw=true" alt="Image 2">
+            <img src="https://github.com/zhangwenhao1111/fist/blob/main/3.jpg?raw=true" alt="Image 3">
         </div>
-    </section>
+        <button class="carousel-button prev" onclick="prevSlide()">❞</button>
+        <button class="carousel-button next" onclick="nextSlide()">❟</button>
+    </div>
+</section>
 
-    <!-- Video Section -->
-    <section id="video">
-        <h2>Videos</h2>
+<!-- Video Section -->
+<section id="video">
+    <video controls>
+        <source src="your-video-file.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
 
-        <video controls>
-            <source src="your-video-file.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
-
-        <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </section>
-
-    <!-- Contact Section -->
-    <section id="contact">
-        <h2>Contact</h2>
-        <p style="text-align:center;">Feel free to contact me at: <strong>your-email@example.com</strong></p>
-    </section>
-</main>
-
-<footer>
-    <p>© 2024 My Personal Website</p>
-</footer>
+    <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</section>
 
 <script>
     let currentSlide = 0;
