--- a/index.html
+++ b/index.html
@@ -12,13 +12,17 @@
             color: #333;
             margin: 0;
             padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
 
         .carousel {
-            margin: 40px auto;
+            margin: 40px 0;
             position: relative;
             overflow: hidden;
-            max-width: 700px;
+            max-width: 80%;
+            width: 700px;
             border-radius: 10px;
         }
 
@@ -56,14 +60,16 @@
         video {
             display: block;
             margin: 40px auto;
-            max-width: 700px;
+            max-width: 80%;
+            width: 700px;
             border-radius: 10px;
         }
 
         iframe {
             display: block;
             margin: 20px auto;
-            max-width: 700px;
+            max-width: 80%;
+            width: 700px;
             border-radius: 10px;
         }
 
@@ -90,6 +96,9 @@
         .content-section {
             display: none;
             padding: 20px;
+            width: 100%;
+            max-width: 800px;
+            margin: 0 auto;
         }
 
         .content-section.active {
