--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
             color: white;
             padding: 10px;
             cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
+        .carousel-button:hover {
+            background-color: rgba(0, 0, 0, 0.9);
         }
 
         .prev {
@@ -72,6 +77,12 @@
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             margin-bottom: 20px;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+
+        video:hover, iframe:hover {
+            transform: scale(1.02);
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
         }
 
         .tab-container {
@@ -88,11 +99,12 @@
             color: white;
             border-radius: 5px;
             font-weight: bold;
-            transition: background-color 0.3s;
+            transition: background-color 0.3s, transform 0.3s;
         }
 
         .tab:hover {
             background-color: #555;
+            transform: scale(1.05);
         }
 
         .tab.active {
@@ -109,6 +121,26 @@
 
         .content-section.active {
             display: block;
+        }
+
+        .carousel-thumbnail {
+            display: flex;
+            justify-content: center;
+            margin-top: 20px;
+        }
+
+        .carousel-thumbnail img {
+            width: 100px;
+            height: auto;
+            margin: 0 5px;
+            cursor: pointer;
+            border-radius: 5px;
+            transition: transform 0.3s, box-shadow 0.3s;
+        }
+
+        .carousel-thumbnail img:hover {
+            transform: scale(1.1);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
     </style>
 </head>
@@ -130,13 +162,18 @@
         <button class="carousel-button prev" onclick="prevSlide()">❞</button>
         <button class="carousel-button next" onclick="nextSlide()">❟</button>
     </div>
+    <div class="carousel-thumbnail">
+        <img src="https://github.com/zhangwenhao1111/fist/blob/main/1.jpg?raw=true" alt="Thumbnail 1" onclick="showSlide(0)">
+        <img src="https://github.com/zhangwenhao1111/fist/blob/main/2.jpg?raw=true" alt="Thumbnail 2" onclick="showSlide(1)">
+        <img src="https://github.com/zhangwenhao1111/fist/blob/main/3.jpg?raw=true" alt="Thumbnail 3" onclick="showSlide(2)">
+    </div>
 </section>
 
 <!-- Video Section -->
 <section id="video" class="content-section">
     <div class="media-container">
         <video controls>
-            <source src="https://github.com/zhangwenhao1111/fist/raw/refs/heads/main/MP41.mp4" type="video/mp4">
+            <source src="your-video-file.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
 
