--- a/index.html
+++ b/index.html
@@ -21,22 +21,33 @@
             margin: 40px 0;
             position: relative;
             overflow: hidden;
-            max-width: 80%;
+            max-width: 100%;
             width: 700px;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            backdrop-filter: blur(10px);
+            background: rgba(255, 255, 255, 0.3);
         }
 
         .carousel img {
-            width: 100%;
+            width: 80%;
             height: auto;
             display: block;
-            transition: transform 0.5s ease;
+            transition: transform 0.5s ease, opacity 0.5s ease;
+            margin: auto;
         }
 
         .carousel-container {
             display: flex;
             transition: transform 0.5s ease-in-out;
+        }
+
+        .carousel img:not(:nth-child(calc(var(--current-slide, 0) + 1))) {
+            transform: scale(0.8);
+            opacity: 0.5;
         }
 
         .carousel-button {
@@ -65,15 +76,21 @@
 
         .media-container {
             margin: 40px auto;
-            max-width: 80%;
+            max-width: 100%;
             width: 700px;
             display: flex;
             flex-direction: column;
             align-items: center;
+            backdrop-filter: blur(10px);
+            background: rgba(255, 255, 255, 0.3);
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
 
         video, iframe {
             width: 100%;
+            max-width: 640px;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             margin-bottom: 20px;
@@ -142,6 +159,20 @@
             transform: scale(1.1);
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
+
+        @media (max-width: 768px) {
+            .carousel, .media-container {
+                width: 95%;
+            }
+
+            .carousel img {
+                width: 100%;
+            }
+
+            video, iframe {
+                width: 100%;
+            }
+        }
     </style>
 </head>
 <body>
@@ -190,6 +221,7 @@
         currentSlide = (index + totalSlides) % totalSlides;
         const offset = -currentSlide * 100;
         carouselContainer.style.transform = 'translateX(' + offset + '%)';
+        document.documentElement.style.setProperty('--current-slide', currentSlide);
     }
 
     function nextSlide() {
