--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
 
-        .carousel img:nth-child(n) {
+        .carousel img {
             filter: blur(4px);
             transform: scale(0.8);
             opacity: 0.5;
         }
 
-        .carousel img:nth-child(calc(var(--current-slide, 0) + 1)) {
+        .carousel img.active {
             filter: blur(0);
             transform: scale(1);
             opacity: 1;
@@ -172,7 +172,7 @@
     <div class="carousel">
         <button class="carousel-button prev" onclick="prevSlide()">❞</button>
         <div class="carousel-container">
-            <img src="https://github.com/zhangwenhao1111/fist/blob/main/1.jpg?raw=true" alt="Image 1">
+            <img src="https://github.com/zhangwenhao1111/fist/blob/main/1.jpg?raw=true" alt="Image 1" class="active">
             <img src="https://github.com/zhangwenhao1111/fist/blob/main/2.jpg?raw=true" alt="Image 2">
             <img src="https://github.com/zhangwenhao1111/fist/blob/main/3.jpg?raw=true" alt="Image 3">
         </div>
@@ -199,7 +199,7 @@
         const carouselContainer = document.querySelector('.carousel-container');
         const totalSlides = document.querySelectorAll('.carousel img').length;
         currentSlide = (index + totalSlides) % totalSlides;
-        document.documentElement.style.setProperty('--current-slide', currentSlide);
+        updateCarousel();
     }
 
     function nextSlide() {
@@ -216,13 +216,9 @@
         const carouselImages = document.querySelectorAll('.carousel img');
         carouselImages.forEach((img, index) => {
             if (index === currentSlide) {
-                img.style.transform = 'scale(1)';
-                img.style.opacity = '1';
-                img.style.filter = 'blur(0)';
+                img.classList.add('active');
             } else {
-                img.style.transform = 'scale(0.8)';
-                img.style.opacity = '0.5';
-                img.style.filter = 'blur(4px)';
+                img.classList.remove('active');
             }
         });
     }
