--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             position: relative;
             max-width: 100%;
             width: 800px;
-            height: 400px;
+            height: 300px;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -31,11 +31,13 @@
         .carousel-container {
             display: flex;
             transition: transform 0.5s ease-in-out;
+            width: 100%;
+            justify-content: center;
         }
 
         .carousel img {
-            width: 300px;
-            height: 200px;
+            width: 250px;
+            height: 300px;
             transition: transform 0.5s ease, opacity 0.5s ease;
             border-radius: 10px;
             margin: 0 10px;
@@ -44,7 +46,7 @@
 
         .carousel img {
             filter: blur(4px);
-            transform: scale(0.8);
+            transform: scale(0.7);
             opacity: 0.5;
         }
 
@@ -163,17 +165,17 @@
 <body>
 
 <div class="tab-container">
-    <div class="tab active" onclick="showSection('gallery')">Gallery</div>
+    <div class="tab" onclick="showSection('gallery')">Gallery</div>
     <div class="tab" onclick="showSection('video')">Video</div>
 </div>
 
 <!-- Gallery Section with Image Carousel -->
-<section id="gallery" class="content-section active">
+<section id="gallery" class="content-section">
     <div class="carousel">
         <button class="carousel-button prev" onclick="prevSlide()">❞</button>
         <div class="carousel-container">
-            <img src="https://github.com/zhangwenhao1111/fist/blob/main/1.jpg?raw=true" alt="Image 1" class="active">
-            <img src="https://github.com/zhangwenhao1111/fist/blob/main/2.jpg?raw=true" alt="Image 2">
+            <img src="https://github.com/zhangwenhao1111/fist/blob/main/1.jpg?raw=true" alt="Image 1">
+            <img src="https://github.com/zhangwenhao1111/fist/blob/main/2.jpg?raw=true" alt="Image 2" class="active">
             <img src="https://github.com/zhangwenhao1111/fist/blob/main/3.jpg?raw=true" alt="Image 3">
         </div>
         <button class="carousel-button next" onclick="nextSlide()">❟</button>
@@ -193,27 +195,12 @@
 </section>
 
 <script>
-    let currentSlide = 0;
-
-    function showSlide(index) {
-        const carouselContainer = document.querySelector('.carousel-container');
-        const totalSlides = document.querySelectorAll('.carousel img').length;
-        currentSlide = (index + totalSlides) % totalSlides;
-        updateCarousel();
-    }
-
-    function nextSlide() {
-        currentSlide = (currentSlide + 1) % document.querySelectorAll('.carousel img').length;
-        updateCarousel();
-    }
-
-    function prevSlide() {
-        currentSlide = (currentSlide - 1 + document.querySelectorAll('.carousel img').length) % document.querySelectorAll('.carousel img').length;
-        updateCarousel();
-    }
+    let currentSlide = 1;
 
     function updateCarousel() {
         const carouselImages = document.querySelectorAll('.carousel img');
+        const totalSlides = carouselImages.length;
+
         carouselImages.forEach((img, index) => {
             if (index === currentSlide) {
                 img.classList.add('active');
@@ -221,6 +208,21 @@
                 img.classList.remove('active');
             }
         });
+
+        const offset = -250 * (currentSlide - 1);
+        document.querySelector('.carousel-container').style.transform = `translateX(${offset}px)`;
+    }
+
+    function nextSlide() {
+        const totalSlides = document.querySelectorAll('.carousel img').length;
+        currentSlide = (currentSlide + 1) % totalSlides;
+        updateCarousel();
+    }
+
+    function prevSlide() {
+        const totalSlides = document.querySelectorAll('.carousel img').length;
+        currentSlide = (currentSlide - 1 + totalSlides) % totalSlides;
+        updateCarousel();
     }
 
     function showSection(sectionId) {
@@ -239,8 +241,8 @@
         document.querySelector(`.tab[onclick="showSection('${sectionId}')"]`).classList.add('active');
     }
 
-    // Initialize the carousel with the first slide in focus
-    updateCarousel();
+    // Initialize the gallery as the default active section
+    showSection('gallery');
 </script>
 
 </body>
